Sun Jul 31 18:10:09 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * docs/manual/appendix/thirdparty.tex:
        * docs/manual/manual.pdf:

	  Updated the Appendix documentation for the middleware.

Sun Jul 31 05:02:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/lang/cpp/Behavior_Generator.cpp:

          Bug fix where the precondition handler was generating
          an unnecessary *if* keyword.

Tue Jul 19 14:43:50 UTC 2011  Manjula Peiris  <tmpeiris at cs dot iupui dot edu>

        * cuts/utils/unite/dmac/dmac.mpc:
        * cuts/utils/unite/dmac/vertical/Dmac_Vertical.mpc:
        * cuts/utils/unite/dmac/Dmac-core.mpc:

          Removed Dmac-core.mpc. Added dmac.mpc and chnaged the project
          name in Dmac_Vertical.mpc.

Tue Jul 19 12:18:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/utils/unite/Dataset_Result.cpp:

          Added debugging output.

        * cuts/utils/unite/unite.cpp:
        * cuts/utils/unite/Unite_App.cpp:

          Added --verbose and --debug options.

        * cuts/utils/unite/presentation/console/Console_Presentation_Service.cpp:

          Bug fix where console service did not show the data trend if
          the flag was specified on the command-line.

        * tutorials/QuickStart/analysis/QuickStart.datagraph:
        * tutorials/QuickStart/analysis/QuickStart.unite:

          Bug fix where XML documents contained invalid namespaces.

        * tutorials/QuickStart/analysis/run_test.pl:

          Script for running UNITE on the tutorial dataset.

Tue Jul 19 09:18:29 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>

        * tutorials/QuickStart/descriptors/deployment.config:

          Fixed error in configuration namespace.

        * tutorials/QuickStart/descriptors/run_test.pl:

          Script for validating the system deploys.
