@@ -1,9 +1,17 @@
+Sun Jul 31 17:36:58 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * etc/scripts:
+        * etc/scripts/download_sources.py:
+
+          Helper script for downloading the sources files for CUTS and
+          third-party middleware from the CUTS repo.
+
 Sun Jul 31 18:10:09 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * docs/manual/appendix/thirdparty.tex:
         * docs/manual/manual.pdf:
 
-	  Updated the Appendix documentation for the middleware.
+          Updated the Appendix documentation for the middleware.
 
 Sun Jul 31 05:02:41 UTC 2011  James H. Hill  <hillj at cs dot iupui dot edu>
 
